--- a/src/SME.SGP.Api/SME.SGP.Api.csproj
+++ b/src/SME.SGP.Api/SME.SGP.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\SME.SGP.IoC\SME.SGP.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
+  </ItemGroup>
+
 </Project>
