--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -17,6 +17,9 @@
             <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
+                <value>2</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
