--- a/src/SME.SGP.Dados/SME.SGP.Dados.csproj
+++ b/src/SME.SGP.Dados/SME.SGP.Dados.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="Dapper.Contrib" Version="1.60.1" />
+    <PackageReference Include="Dapper.FluentMap" Version="1.8.0" />
+    <PackageReference Include="Dapper.FluentMap.Dommel" Version="1.7.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
     <PackageReference Include="Npgsql" Version="4.0.8" />
   </ItemGroup>
